made css changes on login page to fix alignment issue

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -1034,7 +1034,7 @@ div.code-coverage-results span.result-good {
 }
 
 .input{
-/*	float:left;*/
+	text-align:right;
 }
 
 div.message {
